--- a/Css/planches.css
+++ b/Css/planches.css
@@ -69,6 +69,7 @@ ________________________________________________________________________________
   }
   
   .about-planches .container-cards-planches .cards h4 {
+    text-align: justify;
     color: rgba(22, 22, 22, 0.712);
     font-size: clamp(15px, 2vw, 16px);
     font-weight: 300;
